Stopped comments flickering when the mouse is moved
Comments are copy-paste able

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -26,6 +26,7 @@
 
 .game .user_listing {
   clear: both;
+  overflow: hidden;
 }
 
 .game .user_listing h2 {
